--- a/test/test_wcc_ZZZ.c.in
+++ b/test/test_wcc_ZZZ.c.in
@@ -52,9 +52,15 @@ int main()
     char bkeyG2[4*WCC_PFS_ZZZ];
     octet BKeyG2= {0,sizeof(bkeyG2), bkeyG2};
 
+    // Identities    
     char alice_id[256],bob_id[256];
     octet IdA= {0,sizeof(alice_id),alice_id};
     octet IdB= {0,sizeof(bob_id),bob_id};
+
+    // Hash of the identities
+    char hida[WCC_PFS_ZZZ], hidb[WCC_PFS_ZZZ];
+    octet HIdA = {0,sizeof(hida),hida};
+    octet HIdB = {0,sizeof(hidb),hidb};     
 
     char x[WCC_PGS_ZZZ];
     octet X= {0,sizeof(x),x};
@@ -123,8 +129,11 @@ int main()
     // Alice's ID
     OCT_jstring(&IdA,"alice@miracl.com");
 
+    // Hash Alice's Id
+    HASH_ID(HASH_TYPE_WCC_ZZZ,&IdA,&HIdA);
+
     // TA: Generate Alice's sender key
-    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&MS,&IdA,&AKeyG1);
+    rtn = WCC_ZZZ_GET_G1_MULTIPLE(&MS,&HIdA,&AKeyG1);
     if (rtn != 0)
     {
         printf("TA WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -134,8 +143,11 @@ int main()
     // Bob's ID
     OCT_jstring(&IdB,"bob@miracl.com");
 
+    // Hash Bob's Id
+    HASH_ID(HASH_TYPE_WCC_ZZZ,&IdB,&HIdB);
+
     // TA: Generate Bob's receiver key
-    rtn = WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,&MS,&IdB,&BKeyG2);
+    rtn = WCC_ZZZ_GET_G2_MULTIPLE(&MS,&HIdB,&BKeyG2);
     if (rtn != 0)
     {
         printf("TA WCC_ZZZ_GET_G2_MULTIPLE() Error %d\n", rtn);
@@ -152,7 +164,7 @@ int main()
     printf("X: 0x");
     OCT_output(&X);
 
-    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&X,&IdA,&PaG1);
+    rtn = WCC_ZZZ_GET_G1_MULTIPLE(&X,&HIdA,&PaG1);
     if (rtn != 0)
     {
         printf("Alice WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -165,7 +177,7 @@ int main()
         printf("Bob WCC_ZZZ_RANDOM_GENERATE() Error %d\n", rtn);
         return 1;
     }
-    rtn = WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&W,&IdA,&PgG1);
+    rtn = WCC_ZZZ_GET_G1_MULTIPLE(&W,&HIdA,&PgG1);
     if (rtn != 0)
     {
         printf("Bob WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
@@ -179,7 +191,7 @@ int main()
         return 1;
     }
 
-    rtn = WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,&Y,&IdB,&PbG2);
+    rtn = WCC_ZZZ_GET_G2_MULTIPLE(&Y,&HIdB,&PbG2);
     if (rtn != 0)
     {
         printf("Bob WCC_ZZZ_GET_G1_MULTIPLE() Error %d\n", rtn);
