--- a/test/test_wcc_invalid_points_ZZZ.c.in
+++ b/test/test_wcc_invalid_points_ZZZ.c.in
@@ -55,6 +55,11 @@ int main()
     octet IdA= {0,sizeof(alice_id),alice_id};
     octet IdB= {0,sizeof(bob_id),bob_id};
 
+    // Hash of the identities
+    char hida[WCC_PFS_ZZZ], hidb[WCC_PFS_ZZZ];
+    octet HIdA = {0,sizeof(hida),hida};
+    octet HIdB = {0,sizeof(hidb),hidb};
+    
     // Ephemeral parameters
     char x[WCC_PGS_ZZZ];
     octet X= {0,sizeof(x),x};
@@ -107,23 +112,33 @@ int main()
     /* TA: Generate master secret  */
     WCC_ZZZ_RANDOM_GENERATE(&RNG,&MS);
 
-    // TA: Generate Alice's sender key
+    // Alice's ID    
     OCT_jstring(&IdA,"alice@miracl.com");
-    WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&MS,&IdA,&AKeyG1);
 
-    // TA: Generate Bob's receiver key
+    // Hash Alice's Id
+    HASH_ID(HASH_TYPE_WCC_ZZZ,&IdA,&HIdA);
+
+    // TA: Generate Alice's sender key    
+    WCC_ZZZ_GET_G1_MULTIPLE(&MS,&HIdA,&AKeyG1);
+
+    // Bob's ID
     OCT_jstring(&IdB,"bob@miracl.com");
-    WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,&MS,&IdB,&BKeyG2);
+
+    // Hash Bob's Id
+    HASH_ID(HASH_TYPE_WCC_ZZZ,&IdB,&HIdB);
+    
+    // TA: Generate Bob's receiver key    
+    WCC_ZZZ_GET_G2_MULTIPLE(&MS,&HIdB,&BKeyG2);
 
     // Generate ephemeral parameters
     WCC_ZZZ_RANDOM_GENERATE(&RNG,&X);
-    WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&X,&IdA,&PaG1);
+    WCC_ZZZ_GET_G1_MULTIPLE(&X,&HIdA,&PaG1);
 
     WCC_ZZZ_RANDOM_GENERATE(&RNG,&W);
-    WCC_ZZZ_GET_G1_MULTIPLE(HASH_TYPE_WCC_ZZZ,&W,&IdA,&PgG1);
+    WCC_ZZZ_GET_G1_MULTIPLE(&W,&HIdA,&PgG1);
 
     WCC_ZZZ_RANDOM_GENERATE(&RNG,&Y);
-    WCC_ZZZ_GET_G2_MULTIPLE(HASH_TYPE_WCC_ZZZ,&Y,&IdB,&PbG2);
+    WCC_ZZZ_GET_G2_MULTIPLE(&Y,&HIdB,&PbG2);
 
     WCC_ZZZ_Hq(HASH_TYPE_WCC_ZZZ,&PaG1,&PbG2,&PgG1,&IdB,&PIA);
     WCC_ZZZ_Hq(HASH_TYPE_WCC_ZZZ,&PbG2,&PaG1,&PgG1,&IdA,&PIB);
