--- a/src/mpin.c.in
+++ b/src/mpin.c.in
@@ -502,17 +502,10 @@ int MPIN_ZZZ_GET_CLIENT_PERMIT(int sha,int date,octet *S,octet *CID,octet *CTT)
 
     ECP_ZZZ_mapit(&P,&H);
 
-//printf("P= "); ECP_ZZZ_output(&P); printf("\n");
-//exit(0);
-
     BIG_XXX_fromBytes(s,S->val);
 
-
-
-//printf("s= "); BIG_XXX_output(s); printf("\n");
     PAIR_ZZZ_G1mul(&P,s);
-//printf("OP= "); ECP_ZZZ_output(&P); printf("\n");
-//
+
     ECP_ZZZ_toOctet(CTT,&P);
     return 0;
 }
@@ -538,7 +531,6 @@ void MPIN_ZZZ_SERVER_1(int sha,int date,octet *CID,octet *HID,octet *HTID)
 
     if (date)
     {
-        //	if (HID!=NULL) ECP_ZZZ_toOctet(HID,&P);
 #ifdef USE_ANONYMOUS
         mhashit(sha,date,CID,&H);
 #else
@@ -548,8 +540,6 @@ void MPIN_ZZZ_SERVER_1(int sha,int date,octet *CID,octet *HID,octet *HTID)
         ECP_ZZZ_add(&P,&R);
         ECP_ZZZ_toOctet(HTID,&P);
     }
-    //else ECP_ZZZ_toOctet(HID,&P);
-
 }
 
 /* Implement M-Pin on server side */
@@ -671,7 +661,6 @@ int MPIN_ZZZ_KANGAROO(octet *E,octet *F)
     int distance[MR_TS];
     FP12_YYY ge,gf,t,table[MR_TS];
     int res=0;
-    // BIG_XXX w;
 
     FP12_YYY_fromOctet(&ge,E);
     FP12_YYY_fromOctet(&gf,F);
@@ -691,11 +680,6 @@ int MPIN_ZZZ_KANGAROO(octet *E,octet *F)
 
     for (dn=0,j=0; j<TRAP; j++)
     {
-
-        //BIG_XXX_copy(w,t.a.a.a);
-        //FP_YYY_redc(w);
-        //i=BIG_XXX_lastbits(w,20)%MR_TS;
-
         i=t.a.a.a.g[0]%MR_TS;
 
         FP12_YYY_mul(&t,&table[i]);
@@ -710,10 +694,6 @@ int MPIN_ZZZ_KANGAROO(octet *E,octet *F)
     {
         steps++;
         if (steps>4*TRAP) break;
-
-        //BIG_XXX_copy(w,ge.a.a.a);
-        //FP_YYY_redc(w);
-        //i=BIG_XXX_lastbits(w,20)%MR_TS;
 
         i=ge.a.a.a.g[0]%MR_TS;
 
@@ -788,11 +768,10 @@ int MPIN_ZZZ_PRECOMPUTE(octet *TOKEN,octet *CID,octet *CP,octet *G1,octet *G2)
 int MPIN_ZZZ_CLIENT_KEY(int sha,octet *G1,octet *G2,int pin,octet *R,octet *X,octet *H,octet *wCID,octet *CK)
 {
     FP12_YYY g1,g2;
-    FP4_YYY c;//,cp,cpm1,cpm2;
-//    FP2_YYY f;
+    FP4_YYY c;
     ECP_ZZZ W;
     int res=0;
-    BIG_XXX r,z,x,h;//q,m,a,b;
+    BIG_XXX r,z,x,h;
 
     FP12_YYY_fromOctet(&g1,G1);
     FP12_YYY_fromOctet(&g2,G2);
@@ -815,37 +794,7 @@ int MPIN_ZZZ_CLIENT_KEY(int sha,octet *G1,octet *G2,int pin,octet *R,octet *X,oc
 
         FP12_YYY_compow(&c,&g1,z,r);
 
-        /*       BIG_XXX_rcopy(a,Fra_YYY);
-               BIG_XXX_rcopy(b,Frb_YYY);
-               FP2_YYY_from_BIGs(&f,a,b);
-
-               BIG_XXX_rcopy(q,Modulus_YYY);
-               BIG_XXX_copy(m,q);
-               BIG_XXX_mod(m,r);
-
-               BIG_XXX_copy(a,z);
-               BIG_XXX_mod(a,m);
-
-               BIG_XXX_copy(b,z);
-               BIG_XXX_sdiv(b,m);
-
-
-               FP12_YYY_trace(&c,&g1);
-
-               FP12_YYY_copy(&g2,&g1);
-               FP12_YYY_frob(&g2,&f);
-               FP12_YYY_trace(&cp,&g2);
-
-               FP12_YYY_conj(&g1,&g1);
-               FP12_YYY_mul(&g2,&g1);
-               FP12_YYY_trace(&cpm1,&g2);
-               FP12_YYY_mul(&g2,&g1);
-               FP12_YYY_trace(&cpm2,&g2);
-
-               FP4_YYY_xtr_pow2(&c,&cp,&c,&cpm1,&cpm2,a,b);
-        */
         mpin_hash(sha,&c,&W,CK);
-
     }
     return res;
 }
